--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 		<script type="text/javascript" src="./js/libraries/loaders/collada/KeyFrameAnimation.js"></script>
 		<script type="text/javascript" src="./js/libraries/loaders/collada/ColladaLoader.js"></script>
 
-		<script type="text/javascript" src="./js/WasdControls.js"></script>
+		<script type="text/javascript" src="./js/libraries/webvr/webvr-config.js"></script>
+		<script type="text/javascript" src="./js/libraries/webvr/VRControls.js"></script>
+		<script type="text/javascript" src="./js/libraries/webvr/VREffect.js"></script>
+		<script type="text/javascript" src="./js/libraries/webvr/webvr-polyfill.js"></script>
+		<script type="text/javascript" src="./js/libraries/webvr/webvr-manager.js"></script>
 
 		<script type="text/javascript" src="./js/core.js"></script>
 		<script type="text/javascript" src="./js/main.js"></script>
